Playlist sorting by type does not work

BUG: 249338
FIXED-IN: 2.8